Add initial project structure with configuration, validation, and template generation for cover letters

--- a/package.json
+++ b/package.json
@@ -12,5 +12,18 @@
   },
   "keywords": ["cli", "cover-letter", "generator"],
   "author": "Görkem Özkan",
-  "license": "MIT"
+  "license": "MIT",
+  "scripts": {
+    "test": "vitest",
+    "test:watch": "vitest --watch",
+    "test:coverage": "vitest --coverage",
+    "test:format": "node test-formats.mjs",
+    "lint": "eslint src/ tests/",
+    "lint:fix": "eslint src/ tests/ --fix"
+  },
+  "devDependencies": {
+    "vitest": "^1.0.0",
+    "@vitest/coverage-v8": "^1.0.0",
+    "eslint": "^8.0.0"
+  }
 } 
